--- a/client/index.html
+++ b/client/index.html
@@ -47,7 +47,9 @@
     <style>
       #root {
         min-height: 100vh;
+        width: 100%;
         display: flex;
+        flex-direction: column;
       }
 
       /* Loading spinner inicial */
